# stakeholder-interview-sim

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_session_evaluations.py
backend/app/: config.py  db.py  main.py  vector_store.py
backend/app/api/: eval.py  personas.py
backend/app/evaluation/: iqr_schema.py  iqr_scorer.py  multi_source_evaluator.py  sic_scorer.py
backend/app/evaluation/prompts/: iqr_system_prompt.txt  sic_system_prompt.txt
backend/app/evaluation/sic_keys/: SIC_README.md  alex_martinez_sic_key.json  michael_mike_alvarez_sic_key.json  sarah_donnelly_sic_key.json  thomas_tom_caldwell_sic_key.json
backend/app/personas/: prompt_assembly.py  voices.py
backend/app/personas/configs/: developer_persona_config.json  developer_persona_config.raw.json  municipal_planner_persona_config.json  planner_persona_config.json  (+5 more)
backend/app/rag/: context.py
backend/app/realtime/: openai_proxy.py  retrieve.py  session.py  token.py  ws.py
backend/scripts/: build_persona_config.py  build_persona_config_v2.py  build_persona_prompt.py  build_world_chunks.py  build_world_index.py  embed_and_load.py  generate_all_persona_configs.py  generate_all_persona_prompts.py  normalize_persona_config.py
backend/scripts/seed_data/: corpus_climate skeptics.json  corpus_climate_risk_analyst.json  corpus_real_estate_persona.json  corpus_urban_planner.json  world_bible_chunks.json
(+57 files in other folders)
