[project]
name = "stakeholder-interview-sim"
version = "1.0.0"
description = "AI-powered stakeholder interview simulator with real-time audio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]
scripts = [
    "python-docx>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"app/evaluation/iqr_scorer.py" = ["E501", "I001"]
"app/evaluation/iqr_schema.py" = ["E501", "I001"]
"app/evaluation/sic_scorer.py" = ["E501", "I001", "F841"]
"app/evaluation/multi_source_evaluator.py" = ["E501", "I001", "F401", "F841", "W293"]
"app/personas/prompt_assembly.py" = ["E501"]
"scripts/*.py" = ["E501", "I001", "F401", "F841", "W293", "W292"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
